@@ -2,6 +2,7 @@
 - Unit tests for tracker type, app name, app ID, app version, app installer ID.
 - Fix content groups payload when content groups is None.
 - Use Python version as user-agent string.
+- Rebuild hit payload to remove items with None values.
 
 1.0a1:
 - Unit tests for creating a tracker and updating its custom dimensions, custom metrics or user ID.
